--- a/sfgame/.gitignore
+++ b/sfgame/.gitignore
@@ -31,3 +31,11 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Environment variables
+.env
+.env.*
+
+# Spring local configs
+application-local.properties
+application-dev.properties
