--- a/sfgame/src/main/resources/application.properties
+++ b/sfgame/src/main/resources/application.properties
@@ -1,1 +1,32 @@
 spring.application.name=sfgame
+
+# ===============================
+# Datasource (bez secrets)
+# ===============================
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+# ===============================
+# SQL init
+# ===============================
+spring.sql.init.mode=never
+spring.sql.init.schema-locations=classpath:db/SFGameLikeDB.sql
+spring.sql.init.encoding=UTF-8
+spring.sql.init.platform=postgresql
+spring.sql.init.separator=;
+
+# ===============================
+# JPA / Hibernate
+# ===============================
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+
+
+spring.config.import=optional:file:.env
+
