--- a/sfgame/src/main/resources/application.properties
+++ b/sfgame/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=${DB_PASSWORD}
 # ===============================
 # SQL init
 # ===============================
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:db/SFGameLikeDB.sql
 spring.sql.init.encoding=UTF-8
 spring.sql.init.platform=postgresql
@@ -25,8 +25,3 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-
-
-
-spring.config.import=optional:file:.env
-
