Basic player details implementation

--- a/src/main/resources/db/sql.properties
+++ b/src/main/resources/db/sql.properties
@@ -5,3 +5,8 @@ findGuildById=SELECT * FROM guilds WHERE id = ?;
 findPlayersWithGuild=SELECT p.*, g.name AS guild_name FROM players p LEFT JOIN guild_members gm ON p.id = gm.member_id LEFT JOIN guilds g ON gm.guild_id = g.id;
 
 findPlayersByGuildId=SELECT p.*, g.name AS guild_name FROM players p LEFT JOIN guild_members gm ON p.id = gm.member_id LEFT JOIN guilds g ON gm.guild_id = g.id WHERE gm.guild_id = ? ORDER BY p.lvl DESC, p.xp DESC, p.name ASC;
+
+
+findPlayersNamesIdOrderByName=SELECT name, id FROM players ORDER BY name ASC;
+findPlayerByName=SELECT p.*, g.name AS guild_name FROM players p LEFT JOIN guild_members gm ON p.id = gm.member_id LEFT JOIN guilds g ON gm.guild_id = g.id WHERE p.name = ?;
+findPlayerById=SELECT * FROM players WHERE id = ?;
