--- a/src/main/resources/db/sql.properties
+++ b/src/main/resources/db/sql.properties
@@ -1,6 +1,7 @@
 findAllPlayersWithPositionOrdered=SELECT p.*, l.position, g.name AS guild_name FROM players p JOIN legacy_leaderboard l ON p.id = l.player_id LEFT JOIN guild_members gm ON p.id = gm.member_id LEFT JOIN guilds g ON gm.guild_id = g.id ORDER BY l.position ASC;
 
 findGuildById=SELECT * FROM guilds WHERE id = ?;
+findGuildByPlayerId=SELECT g.* FROM guilds g LEFT JOIN guild_members gm ON g.id = gm.guild_id WHERE gm.member_id = ?;
 
 findPlayersWithGuild=SELECT p.*, g.name AS guild_name FROM players p LEFT JOIN guild_members gm ON p.id = gm.member_id LEFT JOIN guilds g ON gm.guild_id = g.id;
 
