Implement the ability to buy items in the shop, still need to figure out the prices.

--- a/src/main/resources/db/sql.properties
+++ b/src/main/resources/db/sql.properties
@@ -12,4 +12,7 @@ findPlayersNamesIdOrderByName=SELECT name, id FROM players ORDER BY name ASC;
 findPlayerByName=SELECT p.*, g.name AS guild_name FROM players p LEFT JOIN guild_members gm ON p.id = gm.member_id LEFT JOIN guilds g ON gm.guild_id = g.id WHERE p.name = ?;
 findPlayerById=SELECT * FROM players WHERE id = ?;
 
+updatePlayerGold=UPDATE players SET gold = ? WHERE id = ?;
+
 findAllItemTemplates=SELECT * FROM item_templates;
+
