minor frontend changes, implement the possibility to sort leaderboard

--- a/src/main/resources/db/sql.properties
+++ b/src/main/resources/db/sql.properties
@@ -1,4 +1,5 @@
 findAllPlayersWithPositionOrdered=SELECT p.*, l.position, g.name AS guild_name FROM players p JOIN legacy_leaderboard l ON p.id = l.player_id LEFT JOIN guild_members gm ON p.id = gm.member_id LEFT JOIN guilds g ON gm.guild_id = g.id ORDER BY l.position ASC;
+updatePlayerPosition=UPDATE legacy_leaderboard SET position = ? WHERE player_id = ?;
 
 findGuildById=SELECT * FROM guilds WHERE id = ?;
 findGuildByPlayerId=SELECT g.* FROM guilds g LEFT JOIN guild_members gm ON g.id = gm.guild_id WHERE gm.member_id = ?;
@@ -13,6 +14,7 @@ findPlayerByName=SELECT p.*, g.name AS guild_name FROM players p LEFT JOIN guild
 findPlayerById=SELECT * FROM players WHERE id = ?;
 
 updatePlayerGold=UPDATE players SET gold = ? WHERE id = ?;
+updatePlayerStats=UPDATE players SET base_strength = ?, base_constitution = ?, base_luck = ? WHERE id = ?;
 
 findAllItemTemplates=SELECT * FROM item_templates;
 
